CSS - player overflow-x not allowed for Firefox copy text issues - part 2

--- a/css/flowplayer.css
+++ b/css/flowplayer.css
@@ -349,6 +349,7 @@
   max-height: 100%;
   overflow-x: hidden;
   overflow-y: visible;
+  scrollbar-width: none;
   border-radius: .24em;
   background-position: center;
   background-repeat: no-repeat;
